Bug 1676020 - Fix client offset computation on X11. r=stransky,jhorak

The root cause of the issue is that screen coordinates in the child
process are not quite right.

E.g, with a window on the top left, with window manager borders of 5px
each, the screenX on a simple test-case like:

    <!doctype html>
    <pre id="log"></pre>
    <script>
      const log = document.getElementById("log");
      document.addEventListener("mousemove", function(e) {
        log.innerText = `${e.screenX}, ${e.screenY}\n`;
      });
    </script>

Shows screenX of 0 instead of the expected frame border width which is
correct for e.g., document.documentElement.screenX in the browser
toolbox (parent process).

It seems this is because we don't have a correctly-computed client
offset (the client offset is zero, when instead it should be
(border-width, titlebar-height).

The coordinate space of mBounds is weird AF, but it seems it is expected
that mBounds.TopLeft() are the top left of the outer window, while
mBounds.Size() is the inner size, and mClientOffset is what compensates
between the two.

I've tested this on GNOME and KDE (though nowadays those use borderless
windows, so client offset should ~always be zero), on ctwm (which is
where I could reproduce the issue), and on Sway (which has borders but
it's Wayland. As expected we end up with a client offset of zero there).

The implementation of RecomputeClientOffset() should ensure that we work
with an internally-consistent coordinate space.

Differential Revision: https://phabricator.services.mozilla.com/D148583